# multimodal

./: README.md  pyproject.toml
notebooks/: simple-diffusion-model.ipynb
