[tool.poetry]
name = "multimodal"
version = "0.1.0"
description = ""
authors = ["Albert Putra Purnama <albertputrapurnama@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
torch = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
